<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pinkblue">
        <TextView
            android:id="@+id/fotosofi"
            android:layout_width="@dimen/_250dp"
            android:layout_height="@dimen/_250dp"
            android:background="@drawable/sopi"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50dp"/>
        <TextView
            android:id="@+id/agiah_sofia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agiah_sofia"
            android:textSize="@dimen/_80sp"
            android:layout_marginVertical="@dimen/_12dp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/miracleday"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/fotosofi"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/_200"
        android:layout_height="@dimen/_60dp"
        android:layout_below="@id/agiah_sofia"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="#CE71A4E4"
        android:text="@string/friendly"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="@dimen/_30sp">
    </Button>
    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/_200"
        android:layout_height="@dimen/_60dp"
        android:layout_below="@+id/button1"
        android:layout_marginStart="@dimen/_60dp"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/creative"
        android:textSize="@dimen/_30sp"
        android:background="#FAC8C8">
    </Button>
    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/_200"
        android:layout_height="@dimen/_60dp"
        android:layout_below="@+id/button2"
        android:layout_marginStart="@dimen/_125dp"
        android:layout_marginTop="@dimen/_45dp"
        android:text="@string/active"
        android:textSize="@dimen/_30sp"
        android:background="#E39FCC">
    </Button>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/lingkaran"
        android:layout_below="@+id/agiah_sofia"
        android:layout_height="@dimen/_120dp"
        android:layout_width="@dimen/_120dp"
        android:src="@drawable/mablue"
        android:layout_marginHorizontal="@dimen/_245dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/_30sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/agiah_sofia"
        android:layout_marginTop="@dimen/_43dp"
        android:layout_marginStart="265sp"
        android:textStyle="bold"/>
</RelativeLayout>