<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BCE5F6"
        tools:ignore="UselessParent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/sofi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/sopi"
            android:layout_marginHorizontal="@dimen/_39dp"
            android:layout_marginVertical="@dimen/_39dp"/>
        <TextView
            android:id="@+id/abaoutme"
            android:fontFamily="@font/cachetfont"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_agiah_sofia"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_74dp"
            android:textSize="@dimen/_30sp"
            android:layout_toEndOf="@id/sofi"/>
        <RelativeLayout
            android:id="@+id/white"
            android:layout_width="@dimen/_420dp"
            android:layout_height="@dimen/_230dp"
            android:background="#F3C1CF"
            android:layout_below="@id/sofi">
            <RelativeLayout
                android:id="@+id/blue"
                android:layout_width="@dimen/_390dp"
                android:layout_height="@dimen/_200"
                android:background="#D3B9F1"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ocehan"
                    android:fontFamily="@font/cachetfont"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_16dp"
                    android:textSize="@dimen/_20sp"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/white2"
            android:layout_width="@dimen/_200"
            android:layout_height="@dimen/_200"
            android:layout_below="@id/white"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:background="#FAC8C8">

            <RelativeLayout
                android:id="@+id/blue2"
                android:layout_width="@dimen/_175dp"
                android:layout_height="@dimen/_175dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#CE71A4E4">

                <TextView
                    android:id="@+id/skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_16dp"
                    android:fontFamily="@font/cachetfont"
                    android:text="@string/skills"
                    android:textColor="#000000"
                    android:textSize="@dimen/_20sp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/arrow"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:background="@drawable/arrow"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_580dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sofi_s_skills"
        android:textSize="@dimen/_30sp"
        android:fontFamily="@font/miracleday"
        android:layout_marginTop="@dimen/_550dp"
        android:layout_marginStart="@dimen/_32sp"
        android:textColor="@android:color/black"/>
</RelativeLayout>